--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "node-schedule": "^2.1.1",
     "pg": "^8.13.1",
     "slugify": "^1.6.6",
     "uuid": "^11.0.3"
