--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.4.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "slugify": "^1.6.6",
     "uuid": "^11.0.3"
