--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+NEXT_PUBLIC_URL=http://localhost:3000
 
 # Database Configuration
 DB_USER=root
@@ -27,6 +28,7 @@ MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_FROM=
-MAIL_FROM_NAME=
-MAIL_TO=
+MAIL_FROM=notifikasi@intechofficial.com
+MAIL_FROM_NAME="WasteLess"
+MAIL_TO=intechofficialteam@gmail.com
+ADMIN_EMAIL=intechofficialteam@gmail.com
